[package]
name = "ckb-integration-test"
version = "0.0.1"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
description = "ckb integration tests"

[dependencies]
clap = { version = "2" }
ckb-jsonrpc-types = "0.42.0"
ckb-types = "0.42.0"
ckb-util = "0.42.0"
ckb-logger = "0.42.0"
ckb-logger-config = "0.42.0"
ckb-logger-service = "0.42.0"
ckb-error = "0.42.0"
tempfile = "3.0"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
serde_json = "1.0"
lazy_static = "1.4.0"
ckb-indexer = { git = "https://github.com/keroro520/ckb-indexer", rev = "a916095be49837ea4fa309fcdc7728c64a15802f" }
fs_extra = "1.2.0"
