[package]
name = "ckb-integration-test"
version = "0.0.1"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
description = "ckb integration tests"

[dependencies]
clap = { version = "2" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", rev = "85bf46065cc91e75980c9ee82925af77c524964d" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", rev = "85bf46065cc91e75980c9ee82925af77c524964d" }
ckb-util = { git = "https://github.com/nervosnetwork/ckb", rev = "85bf46065cc91e75980c9ee82925af77c524964d" }
ckb-logger = { git = "https://github.com/nervosnetwork/ckb", rev = "85bf46065cc91e75980c9ee82925af77c524964d" }
ckb-logger-config = { git = "https://github.com/nervosnetwork/ckb", rev = "85bf46065cc91e75980c9ee82925af77c524964d" }
ckb-logger-service = { git = "https://github.com/nervosnetwork/ckb", rev = "85bf46065cc91e75980c9ee82925af77c524964d" }
ckb-error = { git = "https://github.com/nervosnetwork/ckb", rev = "85bf46065cc91e75980c9ee82925af77c524964d" }
tempfile = "3.0"
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
serde_json = "1.0"
lazy_static = "1.4.0"
ckb-indexer = { git = "https://github.com/keroro520/ckb-indexer", branch = "ckb-v0.44.0-pre" }
fs_extra = "1.2.0"
log = "0.4"
jsonrpc-core = "14.0"
