[package]
name = "ckb-integration-test"
version = "0.0.1"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
description = "ckb integration tests"

[dependencies]
clap = { version = "2" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", rev = "acd2f8132f56bc0e29e72f5b680d54ed68200441" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", rev = "acd2f8132f56bc0e29e72f5b680d54ed68200441" }
ckb-logger-config = { git = "https://github.com/nervosnetwork/ckb", rev = "acd2f8132f56bc0e29e72f5b680d54ed68200441" }
ckb-logger-service = { git = "https://github.com/nervosnetwork/ckb", rev = "acd2f8132f56bc0e29e72f5b680d54ed68200441" }
lazy_static = "1.4.0"
log = "0.4"
ckb-testkit = { path = "./ckb-testkit" }

[workspace]
members = [ "ckb-testkit" ]
