[package]
name = "ckb-bench"
version = "0.0.5"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"

[dependencies]
ckb-testkit = { path = "../ckb-testkit" }

ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-logger-config = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-logger-service = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb.git", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb.git", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
clap = { version = "2" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url_serde = "0.2.0"
url = "1.7.2"
toml = "0.5"
lru = "0.6.0"
crossbeam-channel = "0.5.1"
