[package]
name = "ckb-bench"
version = "0.0.6"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"

[dependencies]
ckb-testkit = { path = "../ckb-testkit" }

ckb-hash = "0.43.0"
ckb-logger-config = "0.43.0"
ckb-logger-service = "0.43.0"
clap = { version = "2" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url_serde = "0.2.0"
url = "1.7.2"
toml = "0.5"
lru = "0.6.0"
crossbeam-channel = "0.5.1"
git-version = "0.3.5"
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3"