[package]
name = "ckb-integration-test"
version = "0.0.6"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"
homepage = "https://github.com/keroro520/ckb"
repository = "https://github.com/keroro520/ckb"
description = "ckb integration tests"

[dependencies]
ckb-testkit = { path = "../ckb-testkit" }
ckb-logger-config = "0.43.0"
ckb-logger-service = "0.43.0"

ckb-exec-params = { git = "https://github.com/keroro520/ckb_exec_test_script", rev = "ddf874a1ecbcc4386403eb6658abdaeb6a4a8450", package = "exec_params" }
clap = { version = "2" }
os_info = { version = "3.0", default-features = false }
lazy_static = "1.4.0"
log = "0.4"
git-version = "0.3.5"
