[package]
name = "ckb-testkit"
version = "0.0.1"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
description = "ckb testkit"

[dependencies]
ckb2019-jsonrpc-types = { package = "ckb-jsonrpc-types", version = "0.43.2" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-error = { git = "https://github.com/nervosnetwork/ckb", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb.git", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb.git", rev = "bba9f083c42c2df8c87f2e7cea2caadc84afe74f" }
ckb-indexer = { git = "https://github.com/keroro520/ckb-indexer", rev = "f73aeb018dbf4dcab5db721225d510005fb3414a" }
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
serde_json = "1.0"
lazy_static = "1.4.0"
fs_extra = "1.2.0"
jsonrpc-core = "14.0"
log = "0.4"
tempfile = "3.0"
version-compare = "0.0.11"

futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bytes = "1"
