[package]
name = "ckb-testkit"
version = "0.0.1"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"
homepage = "https://github.com/keroro520/ckb"
repository = "https://github.com/keroro520/ckb"
description = "ckb testkit"

[dependencies]
ckb2019-jsonrpc-types = { package = "ckb-jsonrpc-types", version = "0.43.2" }
ckb-jsonrpc-types = { git = "https://github.com/keroro520/ckb", branch = "expose-network-compress-module" }
ckb-types = { git = "https://github.com/keroro520/ckb", branch = "expose-network-compress-module" }
ckb-error = { git = "https://github.com/keroro520/ckb", branch = "expose-network-compress-module" }
ckb-crypto = { git = "https://github.com/keroro520/ckb.git", branch = "expose-network-compress-module" }
ckb-hash = { git = "https://github.com/keroro520/ckb.git", branch = "expose-network-compress-module" }
ckb-indexer = { git = "https://github.com/keroro520/ckb-indexer", branch = "expose-network-compress-module" }

reqwest = { version = "0.10.9", features = ["blocking", "json"] }
serde_json = "1.0"
lazy_static = "1.4.0"
fs_extra = "1.2.0"
jsonrpc-core = "14.0"
log = "0.4"
tempfile = "3.0"
version-compare = "0.0.11"
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_derive = { version = "1.0", optional = true }
bytes = { version = "1", optional = true }

[features]
default = []
with_subscribe = ["futures", "tokio", "tokio-util", "serde", "serde_derive", "bytes"]
