[package]
name = "ckb-testkit"
version = "0.0.1"
authors = ["keroro <keroroxx520@gmail.com>"]
edition = "2018"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"
description = "ckb testkit"

[dependencies]
ckb2019-jsonrpc-types = { package = "ckb-jsonrpc-types", version = "0.43.2" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", branch = "develop" }
ckb-types = { git = "https://github.com/nervosnetwork/ckb", branch = "develop" }
ckb-error = { git = "https://github.com/nervosnetwork/ckb", branch = "develop" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb.git", branch = "develop" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb.git", branch = "develop" }
ckb-network = { git = "https://github.com/nervosnetwork/ckb", branch = "develop" }
ckb-channel = { git = "https://github.com/nervosnetwork/ckb", branch = "develop" }
ckb-async-runtime = { git = "https://github.com/nervosnetwork/ckb", branch = "develop" }
ckb-stop-handler = { git = "https://github.com/nervosnetwork/ckb", branch = "develop" }

ckb-indexer = { git = "https://github.com/keroro520/ckb-indexer", branch = "integration-test" }
reqwest = { version = "0.10.9", features = ["blocking", "json"] }
serde_json = "1.0"
lazy_static = "1.4.0"
fs_extra = "1.2.0"
jsonrpc-core = "14.0"
log = "0.4"
tempfile = "3.0"
version-compare = "0.0.11"
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.6", features = ["codec"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_derive = { version = "1.0", optional = true }
bytes = { version = "1", optional = true }
p2p = { version="0.4.0-alpha.2", package="tentacle", features = ["upnp", "parking_lot"] }
futures = { version = "0.3" }

[features]
default = []
with_subscribe = ["tokio", "tokio-util", "serde", "serde_derive", "bytes"]
